--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,19 @@
-# python
+# Python
 __pycache__/
 *.pyc
-.env
-.venv/
+
+# Jupyter
 .ipynb_checkpoints/
+*.ipynb_checkpoints
 
-# data & results
-data/*/
-!data/sample_holdings.csv
-results/**
-!results/.gitkeep
+# Virtual environments
+.venv/
+env/
+venv/
 
-# OS/editor
+# Streamlit cache
+.streamlit/
+
+# OS / IDE junk
 .DS_Store
+Thumbs.db
